API_HarryPotter completto

--- a/API_HarryPotter/src/index.html
+++ b/API_HarryPotter/src/index.html
@@ -2,11 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>APIHoliday</title>
+  <title>APIHarryPotter</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <script src="https://calendarific.com/api/v2/holidays?api_key=REw1dz8vOjrYiC3iyN4TmJtVEfil1Kty"></script>
 </head>
 <body>
   <app-root></app-root>
